# tc-benchmark

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  NETWORK_DIAGNOSTICS.md  README-AUTO.md  README-DEPLOYMENT.md  README.md  TFBENCH_EXAMPLES.md  WINDOWS_SETUP.md  entrypoint.sh  lucid-site-cache.service  monitoring-compose.yaml  pyproject.toml  requirements.txt  tc-grafana.service  teamcache-auto.py  teamcache-setup.py  teamcache.service  tfbench-win.py  tfbench.py  tframetest-3025.1.1-1.el9.x86_64.rpm  tframetest_3025.1.1_amd64.deb
conf/: default.vcl  prometheus.yml
conf/grafana/: grafana.ini  grafana.ini.template
conf/grafana/provisioning/dashboards/: varnish_metrics.json
macos-installer/: Distribution.xml  LICENSE.txt  README.md  build-installer.sh  readme.txt  welcome.txt
macos-installer/scripts/: postinstall
scripts/: build-portable.sh  build-standalone.py  cleanup.sh  create-bundle.sh
